--- a/APT_Baseline_qa.ipynb
+++ b/APT_Baseline_qa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,19 +178,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "from nltk.corpus.reader import XMLCorpusReader, XMLCorpusView\n",
     "\n",
-    "def load_data(string_basedir, string_filenames_in_basedir):\n",
+    "def load_data(string_basedir, string_filenames_in_basedir, subtask_A=False):\n",
     "    for string_filename in string_filenames_in_basedir:\n",
     "        corpus_reader = XMLCorpusReader(string_basedir, string_filename)\n",
     "        \n",
     "        for root_node in corpus_reader.xml():\n",
-    "            node_thread = root_node[2]\n",
-    "\n",
+    "            if not subtask_A:\n",
+    "                node_thread = root_node[0]\n",
+    "            else:\n",
+    "                node_thread = root_node\n",
     "            node_thread_question = node_thread[0]\n",
     "            node_thread_answers = node_thread[1:]\n",
     "\n",
@@ -205,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,14 +218,15 @@
     "                          list_string_filenames_in_basedir,\n",
     "                          start_index_inclusive, \n",
     "                          end_index_exclusive = None, \n",
-    "                          step = None):\n",
-    "    data_generator = load_data(string_basedir, list_string_filenames_in_basedir)\n",
+    "                          step = None,\n",
+    "                         subtask_A = False):\n",
+    "    data_generator = load_data(string_basedir, list_string_filenames_in_basedir, subtask_A)\n",
     "    return islice(data_generator, start_index_inclusive, end_index_exclusive, step)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,6 +490,38 @@
     "print('acc', accuracy_score(y_test, y_predict))\n",
     "print(classification_report(y_test, y_predict))\n",
     "print(classifier.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_generator = get_limited_generator('train', ['SemEval2016-Task3-CQA-QL-train-part1-subtaskA.xml'], \n",
+    "                                       0, None, None, True)\n",
+    "\n",
+    "X, y = get_data(data_generator, do_repeat_relevant=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "QuestionAnswerPair(question=is there any place i can find scented massage oils in qatar?, answer=Yes. It is right behind Kahrama in the National area., data=None)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[0]"
    ]
   },
   {
