--- a/APT_Baseline_qa.ipynb
+++ b/APT_Baseline_qa.ipynb
@@ -2,26 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class MapHelper:\n",
-    "    \n",
-    "    def append_to_list(map_with_list_as_value, map_key, new_list_element):\n",
-    "        existing_list = map_with_list_as_value.get(map_key, [])\n",
-    "        new_list = existing_list + [new_list_element]\n",
-    "        map_with_list_as_value[map_key] = new_list\n",
-    "    \n",
-    "    def append_to_set(map_with_set_as_value, map_key, new_set_element):\n",
-    "        existing_set = map_with_set_as_value.get(map_key, set())\n",
-    "        existing_set.add(new_set_element)\n",
-    "        map_with_set_as_value[map_key] = existing_set\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,8 +91,10 @@
     "class QuestionData:\n",
     "    \n",
     "    STRING_CATEGORY_KEY = \"RELQ_CATEGORY\"\n",
+    "    STRING_ID_KEY = \"RELQ_ID\"\n",
     "    \n",
-    "    def __init__(self, subject, body):\n",
+    "    def __init__(self, ids, subject, body):\n",
+    "        self.id = ids\n",
     "        self.subject = subject\n",
     "        self.body = body\n",
     "    \n",
@@ -142,7 +125,8 @@
     "    \n",
     "class Metadata:\n",
     "    \n",
-    "    def __init__(self, user, date, relevance):\n",
+    "    def __init__(self, ids,  user, date, relevance):\n",
+    "        self.id = ids\n",
     "        self.user = user\n",
     "        self.date = date\n",
     "        self.relevance = relevance\n",
@@ -156,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,11 +148,11 @@
     "    subject = node_question[0]\n",
     "    body = node_question[1]\n",
     "    \n",
-    "    return QuestionData(subject.text, body.text)\n",
+    "    return QuestionData(node_question.attrib[QuestionData.STRING_ID_KEY], subject.text, body.text)\n",
     "\n",
     "\n",
     "def to_answer_data(node_thread_answers):\n",
-    "    f = lambda node: AnswerData(Metadata(node.attrib[AnswerData.STRING_USERNAME_KEY],\n",
+    "    f = lambda node: AnswerData(Metadata(node.attrib[AnswerData.STRING_ID_KEY], node.attrib[AnswerData.STRING_USERNAME_KEY],\n",
     "                                         node.attrib[AnswerData.STRING_DATE_KEY],\n",
     "                                         AnswerRelevance.to_number(node.attrib[AnswerData.STRING_RELEVANCE_KEY])), \n",
     "                                node[0].text)\n",
@@ -178,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +174,7 @@
     "        \n",
     "        for root_node in corpus_reader.xml():\n",
     "            if not subtask_A:\n",
-    "                node_thread = root_node[0]\n",
+    "                node_thread = root_node[2]\n",
     "            else:\n",
     "                node_thread = root_node\n",
     "            node_thread_question = node_thread[0]\n",
@@ -207,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +229,7 @@
     "        list_relevant = []\n",
     "        \n",
     "        for answer in thread.answers:\n",
-    "            question = QuestionData(str(question.subject), str(question.body))\n",
+    "            question = QuestionData(str(question.id), str(question.subject), str(question.body))\n",
     "            question_answer_pair = QuestionAnswerPair(question, answer)\n",
     "            \n",
     "            X += [ question_answer_pair ]\n",
@@ -271,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,42 +351,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of positive / negative examples:  17711 / 16713\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib/python3/dist-packages/scipy/spatial/distance.py:329: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  dist = 1.0 - np.dot(u, v) / (norm(u) * norm(v))\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Pipeline(memory=None,\n",
-       "     steps=[('pipeline', Pipeline(memory=None,\n",
-       "     steps=[('features', FeatureUnion(n_jobs=1,\n",
-       "       transformer_list=[('featureunion', FeatureUnion(n_jobs=1,\n",
-       "       transformer_list=[('tfidf', <__main__.GenericItemTransformer object at 0x7f91e9a84b38>)],\n",
-       "       transformer_weights=None))],\n",
-       "       trans...     pre_dispatch='2*n_jobs', refit=True, return_train_score=True,\n",
-       "       scoring=None, verbose=0))])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "data_generator = get_limited_generator('train', ['SemEval2016-Task3-CQA-QL-train-part1-subtaskA.xml', 'SemEval2016-Task3-CQA-QL-train-part1-subtaskA.xml'], \n",
+    "                                       0, None, None, True)\n",
+    "\n",
+    "X_train, y_train = get_data(data_generator, do_repeat_relevant=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -410,29 +373,27 @@
     "import collections\n",
     "\n",
     "\n",
-    "data_generator = get_limited_generator('train', ['SemEval2016-Task3-CQA-QL-train-part1.xml', 'SemEval2016-Task3-CQA-QL-train-part2.xml'], \n",
-    "                                       0, None, None)\n",
-    "\n",
-    "X, y = get_data(data_generator, do_repeat_relevant=True)\n",
-    "\n",
-    "dict_y_value_counts = collections.Counter(y)\n",
-    "n_negative = dict_y_value_counts[0]\n",
-    "n_positive = dict_y_value_counts[1]\n",
-    "\n",
-    "print(\"Number of positive / negative examples: \", n_positive, \"/\", n_negative )\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
-    "\n",
-    "tuned_parameters = [{'kernel': ['rbf'], 'gamma': [1e-3, 1e-4], 'C': [1, 10, 100, 1000]},\n",
-    "                    {'kernel': ['linear'], 'C': [1, 10, 100, 1000]}]\n",
-    "classifier = GridSearchCV(svm.SVC(), tuned_parameters, cv=5)\n",
+    "tuned_parameters = [{'kernel': ['rbf'], 'gamma': [1e-3, 1e-4], 'C': [1, 10]}]\n",
+    "classifier = GridSearchCV(svm.SVC(probability=True), tuned_parameters, cv=5)\n",
     "pipeline = get_pipeline()\n",
-    "make_pipeline(pipeline, classifier).fit(X_train, y_train)\n"
+    "make_pipeline(pipeline, classifier).fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_generator = get_limited_generator('dev', ['SemEval2016-Task3-CQA-QL-dev.xml'], \n",
+    "                                       0, None, None)\n",
+    "\n",
+    "X_dev, y_dev = get_data(data_generator, do_repeat_relevant=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,79 +410,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib/python3/dist-packages/scipy/spatial/distance.py:329: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  dist = 1.0 - np.dot(u, v) / (norm(u) * norm(v))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MAP:  0.600652552083\n",
-      "acc 0.594625998548\n",
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "          0       0.58      0.60      0.59      3364\n",
-      "          1       0.61      0.59      0.60      3521\n",
-      "\n",
-      "avg / total       0.59      0.59      0.59      6885\n",
-      "\n",
-      "{'C': 1000, 'kernel': 'rbf', 'gamma': 0.001}\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import classification_report, accuracy_score\n",
-    "\n",
-    "X_test = pipeline.fit_transform(X_test)\n",
-    "\n",
-    "classifier_output = classifier.decision_function(X_test)\n",
-    "output_mean_average_precision = mean_average_precision([y_test], [classifier_output])\n",
-    "y_predict = classifier.predict(X_test)\n",
-    "\n",
-    "print('MAP: ', output_mean_average_precision)\n",
-    "print('acc', accuracy_score(y_test, y_predict))\n",
-    "print(classification_report(y_test, y_predict))\n",
-    "print(classifier.best_params_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_generator = get_limited_generator('train', ['SemEval2016-Task3-CQA-QL-train-part1-subtaskA.xml'], \n",
-    "                                       0, None, None, True)\n",
+    "from sklearn.metrics import classification_report, accuracy_score\n",
     "\n",
-    "X, y = get_data(data_generator, do_repeat_relevant=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "QuestionAnswerPair(question=is there any place i can find scented massage oils in qatar?, answer=Yes. It is right behind Kahrama in the National area., data=None)"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X[0]"
+    "X_t = pipeline.fit_transform(X_dev)\n",
+    "\n",
+    "y_predict = classifier.predict(X_t)\n",
+    "\n",
+    "print('MAP: ', output_mean_average_precision)\n",
+    "print('acc', accuracy_score(y_dev, y_predict))\n",
+    "print(classification_report(y_dev, y_predict))\n",
+    "print(classifier.best_params_)"
    ]
   },
   {
@@ -529,7 +431,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "classifier_output = classifier.predict_proba(X_test)\n",
+    "probs = [p[1] for p in classifier_output]\n",
+    "pred = ['true' if p >= 0.5 else 'false' for p in probs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save(pred_filepath, X, probs, preds):\n",
+    "    with open(pred_filepath, 'w') as pred_file:\n",
+    "        for i in range(len(X)):\n",
+    "            x = X[i]\n",
+    "            print(\"{}\\t{}\\t{}\\t{}\\t{}\".format(x[0].id, x[1].metadata.id, 0, probs[i], preds[i])\n",
+    "                  file=pred_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save('baselineA.pred', X_test, probs, pred)"
+   ]
   }
  ],
  "metadata": {
